# frePPLe

./: .gitignore  AUTHORS  COPYING  Makefile.dist  configure.ac
contrib/debian/: Makefile.am  README.txt  changelog  conffiles  control  copyright  frepple.install  frepple.postrm  httpd.conf  rules
contrib/django/: Makefile.am  djangosettings.py  frepplectl.py  requirements.txt  setup.py  supplier_subquery_for_DRP.sql
contrib/django/freppledb/: __init__.py  admin.py  menu.py  settings.py  urls.py  wsgi.py
contrib/django/freppledb/boot/: __init__.py
contrib/django/freppledb/common/: __init__.py  admin.py  adminforms.py  auth.py  dashboard.py  db.py  fields.py  menu.py  menus.py  middleware.py  migrate.py  models.py  report.py  serializers.py  tests.py  urls.py  views.py  widget.py  widgets.py
contrib/django/freppledb/execute/: __init__.py  commands.py  export_database_plan.py  export_database_plan_postgresql.py  export_database_static.py  export_file_plan.py  load.py  loadxml.py  menu.py  models.py  tests.py  urls.py  views.py  widget.py
contrib/django/freppledb/forecast/: admin.py  commands.py  menu.py  models.py  serializers.py  tests.py  urls.py  views.py  widget.py
contrib/django/freppledb/input/: admin.py  menu.py  models.py  serializers.py  tests.py  urls.py  views.py
contrib/django/freppledb/inventoryplanning/: admin.py  commands.py  menu.py  models.py  tests.py  urls.py  views.py  widget.py
contrib/installer/: Makefile.am  README.txt  finish.ini  frepple.nsi  frepplectl.py  freppleserver.py  freppleservice.py  licensefile.ini  manage.py  parameters.ini  setup.py
contrib/openerp/frepple/: __init__.py  __terp__.py  frepple.py
contrib/rpm/: Makefile.am  README.txt  frepple.fedora.spec  frepple.spec  frepple.suse.spec  httpd.conf
contrib/vc/: .gitignore  Makefile.am  README.txt  build.bat  build64.bat  createkey.vcproj  createkey.vcxproj  createkey.vcxproj.filters  createlicense.vcproj  createlicense.vcxproj  createlicense.vcxproj.filters  dll.vcproj  dll.vcxproj  frepple.sln  main.vcproj  main.vcxproj  model.vcproj  model.vcxproj  module_forecast.vcproj  module_forecast.vcxproj  module_forecast.vcxproj.filters  module_inventoryplanning.vcxproj  module_inventoryplanning.vcxproj.filters  module_lp_solver.vcproj  module_webserver.vcxproj  module_webserver.vcxproj.filters  pythonextension.vcxproj  pythonextension.vcxproj.filters  solver.vcproj  solver.vcxproj  solver.vcxproj.filters  utils.vcproj  utils.vcxproj  utils.vcxproj.filters
doc/: Makefile.am  conf.py  frepple.1  frepplectl.1  generate.py
doc/_templates/frepple_website/: layout.html
doc/extension-modules/: forecast-module.rst  odoo-connector.rst  openbravo-connector.rst
doc/installation-guide/: linux-binaries.rst
doc/model-reference/: supplier-item.rst
doc/modules/: frePPLe forecasting module.docx  frePPLe inventory planning module.docx  frePPLe order quoting module.docx
doc/user-guide/: cockpit.rst
doc/user-guide/plan-analysis/: resource-detail-report.rst
include/: frepple.h  freppleinterface.h
include/frepple/: entity.h  model.h  pythonutils.h  solver.h  tags.h  timeline.h  utils.h  xml.h
modules/: Makefile.am
modules/forecast/: Makefile.am  forecast.cpp  forecast.h  forecastsolver.cpp  mod_forecast.xsd  module.cpp  pythonforecast.cpp  timeseries.cpp
modules/inventoryplanning/: Makefile.am  distributions.cpp  inventoryplanning.cpp  inventoryplanning.h  mod_inventoryplanning.xsd  module.cpp
modules/lp_solver/: lpsolver.cpp  lpsolver.h  mod_lpsolver.xsd
modules/webserver/: Makefile.am  civetweb.c  database.cpp  database.h  http_delete.cpp  http_get.cpp  http_post.cpp  json.cpp  json.h  module.cpp  quoting.cpp  webclient.cpp  webserver.cpp  webserver.h  websocket_chat.cpp  websocket_get.cpp  webtoken.cpp
src/: .gitignore  Makefile.am  createkey.cpp  createlicense.cpp  dll.rc  dllmain.cpp  exe.rc  main.cpp  setup.py  tags.cpp
src/model/: actions.cpp  buffer.cpp  calendar.cpp  customer.cpp  demand.cpp  flow.cpp  flowplan.cpp  item.cpp  itemdistribution.cpp  itemsupplier.cpp  leveled.cpp  library.cpp  load.cpp  loadplan.cpp  location.cpp  operation.cpp  operationplan.cpp  pegging.cpp  plan.cpp  problem.cpp  problems_buffer.cpp  problems_demand.cpp  problems_operationplan.cpp  problems_resource.cpp  resource.cpp  resourceskill.cpp  setupmatrix.cpp  skill.cpp  solver.cpp  suboperation.cpp  supplier.cpp  supplieritem.cpp
src/solver/: Makefile.am  operatordelete.cpp  operatormove.cpp  solverbuffer.cpp  solverdemand.cpp  solverflow.cpp  solverload.cpp  solveroperation.cpp  solverplan.cpp  solverprocure.cpp  solverresource.cpp
src/utils/: Makefile.am  actions.cpp  date.cpp  encrypt.cpp  library.cpp  name.cpp  python.cpp  pythonutils.cpp  service.cpp  xml.cpp  xmlparser.cpp
test/: Makefile.am  runtest.py
test/buffer_batch/: buffer_batch.xml
test/buffer_procure_1/: buffer_procure_1.xml
test/callback/: main.cpp
test/custom_fields/: custom_fields.xml
test/datetime/: main.cpp
test/forecast_1/: Makefile.am  forecast_1.1.expect  forecast_1.xml
test/forecast_2/: Makefile.am  forecast_2.1.expect  forecast_2.2.expect
test/forecast_3/: Makefile.am  forecast_3.1.expect  forecast_3.2.expect  forecast_3.4.expect  forecast_3.xml
test/forecast_4/: Makefile.am  forecast_4.1.expect
test/forecast_5/: Makefile.am  forecast_5.1.expect  forecast_5.xml
test/forecast_6/: Makefile.am  forecast_6.xml
test/inventoryplanning_1/: Makefile.am  inventoryplanning_1.1.expect  inventoryplanning_1.1.expect.xml  inventoryplanning_1.xml
test/inventoryplanning_2/: Makefile.am  inventoryplanning_2.1.expect  inventoryplanning_2.xml  stockoutprobability.xml
test/json/: Makefile.am  json.1.expect  json.2.expect  json.3.expect  json.4.expect  json.xml
test/lpsolver_1/: init.py  lp_capacity.mod
test/name/: main.cpp
test/problems/: main.cpp
test/python_1/: init.py
test/python_3/: python_3.py
test/sample_module/: sample_module.cpp  sample_module.h
test/scalability_1/: runtest.py
test/scalability_2/: runtest.py
test/scalability_3/: runtest.py
(+223 files in other folders)
