#
# Process this file with automake to produce Makefile.in
#

EXTRA_DIST = build.bat build64.bat frepple.sln README.txt model.vcproj utils.vcproj main.vcproj solver.vcproj dll.vcproj module_forecast.vcproj createkey.vcproj createlicense.vcproj

clean-local:
	-rm -rf model utils main dll solver module_forecast createlicense createkey *.vcproj.* *.opt *.ncb *.suo *.log *.sdf ipch
